# unnamed_strategy-krabysoft-

./: .gitignore  CLAUDE.md  CMakeLists.txt  GAME_PROJECT.md  HANDOFF.md  imgui.ini  run.sh  sim_overnight.txt  sim_overnight2.txt  sim_quick.txt  sim_quick2.txt  sim_run3.txt
game/: HANDOFF.md
scripts/: autoload.lua  campaign.lua
src/: main.cpp
src/ai/: Pathfinder.cpp  Pathfinder.h
src/audio/: AudioManager.cpp  AudioManager.h
src/campaign/: AlignmentSystem.h  CampaignDef.h  CampaignManager.cpp  CampaignManager.h
src/combat/: CombatEngine.cpp  CombatEngine.h  CombatGrid.cpp  CombatGrid.h  CombatPhase.h  CombatUnit.cpp  CombatUnit.h  DamageCalc.cpp  DamageCalc.h
src/core/: DevLog.cpp  DevLog.h  Game.cpp  Game.h  GameState.h  Game_Campaign.cpp  Game_Combat.cpp  Game_Core.cpp  Game_Editor.cpp  Game_MainMenu.cpp  Game_Town.cpp  Game_WorldMap.cpp  InputState.cpp  InputState.h  TurnManager.cpp  TurnManager.h
src/data/: MapFormat.cpp  MapFormat.h  ResourceNode.h  Resources.h  SaveDB.cpp  SaveDB.h  SaveLoad.cpp  SaveLoad.h
src/editor/: MapEditor.cpp  MapEditor.h  SimulatorWindow.cpp  SimulatorWindow.h
src/hero/: Artifacts.cpp  Artifacts.h  FactionId.h  Hero.cpp  Hero.h  HeroClass.cpp  HeroClass.h  HeroStats.h  LevelUpSystem.cpp  LevelUpSystem.h  SkillRegistry.h  Skills.h
src/magic/: SpellDef.h  SpellRegistry.h
src/meta/: HideoutDB.cpp  HideoutDB.h
src/renderer/: Camera2D.cpp  Camera2D.h  ParticleSystem.cpp  ParticleSystem.h  Shader.cpp  Shader.h  SpriteAnim.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  gl_includes.h
src/scripting/: LuaEngine.cpp  LuaEngine.h  TriggerSystem.cpp  TriggerSystem.h
src/sim/: ArmyBuilder.cpp  ArmyBuilder.h  FullGameSim.cpp  FullGameSim.h  MCTSHero.cpp  MCTSHero.h  SimDB.cpp  SimDB.h  SimTypes.h  SimUnitData.h  Simulator.cpp  Simulator.h  fullgame_main.cpp  sim_main.cpp
src/town/: BuildingDef.h  BuildingRegistry.cpp  BuildingRegistry.h  Town.cpp  Town.h  UnitDef.h
src/ui/: CampaignHUD.cpp  CampaignHUD.h  CombatHUD.cpp  CombatHUD.h  HideoutScreen.cpp  HideoutScreen.h  TownScreen.cpp  TownScreen.h  UIRenderer.cpp  UIRenderer.h  UITypes.h  Widgets.h  WorldMapHUD.cpp  WorldMapHUD.h
src/world/: FogOfWar.cpp  FogOfWar.h  HexGrid.cpp  HexGrid.h  HexMap.cpp  HexMap.h  HexMapRenderer.cpp  HexMapRenderer.h  Noise.h  WorldGen.cpp  WorldGen.h  WorldObject.h
tools/: gen_spell_icons.py  train_win_predictor.py
